--- a/pages/login.html
+++ b/pages/login.html
@@ -15,7 +15,14 @@
 
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <form class="login-form" action="/login" method="post">
+            <h2>Iniciar Sesion</h2>
+            <input type="text" name="usuario" placeholder="usuario" required>
+            <input type="Contraseña" name="Contraseña" placeholder="Contraseña">
+            <button type="submit">Entrar</button>
+        </form>
+    </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
