--- a/index.html
+++ b/index.html
@@ -17,29 +17,176 @@
 <body>
     <header></header>
     <main>
-        <section>
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="./assets/img/Sabrina-Carpenter-Espresso.png" alt="First slide">
+        <aside class="sidebar">
+            <div class="logo">
+
+            </div>
+            <ul class="sidebar-menu">
+                <li>
+                    <i class="fa-solid fa-house"></i>
+                    <h6>Home</h6>
+                </li>
+                <li>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <h6>Buscar</h6>
+                </li>
+                <li>
+                    <i class="fa-solid fa-heart"></i>
+                    <h6>Favoritos</h6>
+                </li>
+                <li>
+                    <i class="fa-solid fa-book"></i>
+                    <h6>Biblioteca</h6>
+                </li>
+            </ul>
+        </aside>
+        <section class="contenido">
+            <h2>Canciones del momento</h2>
+            <div class="canciones">
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
                     </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./assets/img/maxresdefault.png" alt="Second slide">
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
                     </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./assets/img/Escucha Vibra, Música sin Límites.png" alt="Third slide">
+                </article>
+
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
                     </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+            </div>
+            <h2>Canciones del momento</h2>
+            <div class="canciones">
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+            </div>
+            <h2>Canciones del momento</h2>
+            <div class="canciones">
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.</p>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
