--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img class="imagen-loogo" src="./assets/img/logo.png" alt="logo de la pagina"></a>
+          <a class="navbar-brand" href="index.html"
+            ><img
+              class="imagen-loogo"
+              src="./assets/img/logo.png"
+              alt="logo de la pagina"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -43,28 +48,32 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">ACCESO</a>
-              </li>
-              <li class="nav-item">
-               <a class="nav-link" href="">SUSCRIPCION</a>
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  ><i class="fa-solid fa-house text-secondary fa-xl"></i
+                ></a>
               </li>
             </ul>
             <form class="d-flex" role="search">
               <input
-                class="form-control me-2"
+                class="form-control me-2 px-5 text-center rounded-5"
                 type="search"
-                placeholder="Search"
+                placeholder="Que queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-success" type="submit">
-                Search
+              <button class="btn btn-outline-secondary" type="submit">
+                <i class="fa-solid fa-magnifying-glass"></i>
               </button>
             </form>
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link text-secondary" href="#">ACCESO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-secondary" href="">SUSCRIPCION</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
