--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
+        <div class="container-fluid mx-3">
           <a class="navbar-brand" href="index.html"
             ><img
               class="imagen-loogo"
@@ -37,7 +37,7 @@
               alt="logo de la pagina"
           /></a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler bg-light"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -47,10 +47,10 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse ps-5" id="navbarSupportedContent">
             <ul class="navbar-nav mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="casa nav-link active" aria-current="page" href="index.html"
                   ><i class="fa-solid fa-house text-secondary fa-xl"></i
                 ></a>
               </li>
@@ -66,13 +66,14 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
               </button>
             </form>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav text-center ms-auto align-items-center gap-4">
               <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">ACCESO</a>
+                <a class="nav-link text-secondary" href="./pages/login.html">ACCESO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-secondary" href="">SUSCRIPCION</a>
+                <a class="nav-link text-secondary" href="./pages/suscripcion.html">SUSCRIPCION</a>
               </li>
+              <a href="./pages/login.html"><i class="fa-solid fa-circle-user text-secondary fa-xl mx-3"></i></a>
             </ul>
           </div>
         </div>
