--- a/pages/login.html
+++ b/pages/login.html
@@ -17,7 +17,11 @@
     <header></header>
     <main>
         <form class="login-form" action="/login" method="post">
-            <h2>Iniciar Sesion</h2>
+            <h2 class="text">Iniciar Sesion</h2>
+            <button type="button">Continuar con Google</button>
+            <button type="button">Continuar con Apple</button>
+            <button type="button">Continuar con</button>
+            <button type="button">Continuar con numero de telefono</button>
             <input type="text" name="usuario" placeholder="usuario" required>
             <input type="Contraseña" name="Contraseña" placeholder="Contraseña">
             <button type="submit">Entrar</button>
