--- a/index.html
+++ b/index.html
@@ -28,52 +28,54 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid mx-3">
+      <nav class="navbar navbar-expand-lg mx-3">
+        <div class="container-fluid d-flex">
           <a class="navbar-brand" href="index.html"
             ><img
               class="imagen-loogo"
               src="./assets/img/logo.png"
-              alt="logo de la pagina"
+              alt="imagen de logo"
           /></a>
+          <form class="d-flex" role="search">
+            <input
+              class="barra-busqueda form-control me-2 rounded-5 text-center px-5"
+              type="search"
+              placeholder="¿que deseas escuchar?"
+              aria-label="Search"
+            />
+            <i class="lupa-busqueda fa-solid fa-magnifying-glass fa-xl bg-secondary p-3 text-center rounded-5"></i>
+          </form>
           <button
             class="navbar-toggler bg-light"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse ps-5" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-lg-0">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto gap-4">
               <li class="nav-item">
-                <a class="casa nav-link active" aria-current="page" href="index.html"
-                  ><i class="fa-solid fa-house text-secondary fa-xl"></i
-                ></a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input
-                class="form-control me-2 px-5 text-center rounded-5"
-                type="search"
-                placeholder="Que queres escuchar?"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-secondary" type="submit">
-                <i class="fa-solid fa-magnifying-glass"></i>
-              </button>
-            </form>
-            <ul class="navbar-nav text-center ms-auto align-items-center gap-4">
-              <li class="nav-item">
-                <a class="nav-link text-secondary" href="./pages/login.html">ACCESO</a>
+                <a
+                  class="nav-link active text-secondary text-center"
+                  aria-current="page"
+                  href="index.html"
+                  >INICIO</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-secondary" href="./pages/suscripcion.html">SUSCRIPCION</a>
+                <a class="nav-link text-secondary text-center" href="#"
+                  >SUSCRIPCION</a
+                >
               </li>
-              <a href="./pages/login.html"><i class="fa-solid fa-circle-user text-secondary fa-xl mx-3"></i></a>
+              <li class="nav-item">
+                <a class="nav-link text-secondary text-center" href="#"
+                  >LOGIN</a
+                >
+              </li>
             </ul>
           </div>
         </div>
