--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
               placeholder="¿que deseas escuchar?"
               aria-label="Search"
             />
-            <i class="lupa-busqueda fa-solid fa-magnifying-glass fa-xl bg-secondary p-3 text-center rounded-5"></i>
           </form>
           <button
             class="navbar-toggler bg-light"
@@ -57,22 +56,25 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto gap-4">
+            <ul class="navbar-nav ms-auto">
+                <hr>
               <li class="nav-item">
                 <a
-                  class="nav-link active text-secondary text-center"
+                  class="efectos nav-link active text-secondary text-center"
                   aria-current="page"
                   href="index.html"
                   >INICIO</a
                 >
               </li>
+              <hr>
               <li class="nav-item">
-                <a class="nav-link text-secondary text-center" href="#"
+                <a class="efectos nav-link text-secondary text-center" href="./pages/suscripcion.html"
                   >SUSCRIPCION</a
                 >
               </li>
+              <hr>
               <li class="nav-item">
-                <a class="nav-link text-secondary text-center" href="#"
+                <a class="efectos nav-link text-secondary text-center" href="./pages/login.html"
                   >LOGIN</a
                 >
               </li>
