--- a/pages/login.html
+++ b/pages/login.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Proyecto 1: Vibra">
     <meta name="keywords" content="Música, Vibra, Ritmo, Melodía, Canción, Letra">
     <meta name="author" content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia">
+     <script src="https://kit.fontawesome.com/6637e0286d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/login.css">
@@ -18,10 +19,9 @@
     <main>
         <form class="login-form" action="/login" method="post">
             <h2 class="text">Iniciar Sesion</h2>
-            <button type="button">Continuar con Google</button>
-            <button type="button">Continuar con Apple</button>
-            <button type="button">Continuar con</button>
-            <button type="button">Continuar con numero de telefono</button>
+            <button type="button"><i class="fa-brands fa-google text-primary px-4"></i>Continuar con Google</button>
+            <button type="button"><i class="fa-brands fa-apple px-4"></i>Continuar con Apple</button>
+            <button type="button"><i class="fa-solid fa-phone px-4"></i>Continuar con numero de telefono</button>
             <input type="text" name="usuario" placeholder="usuario" required>
             <input type="Contraseña" name="Contraseña" placeholder="Contraseña">
             <button type="submit">Entrar</button>
