--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="canciones">
                 <article class="cancion">
                     <div class="cover">
-                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                        <img class="img-cancion" src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
                         <div class="play-icon"></div>
                     </div>
                     <div class="info">
@@ -86,7 +86,7 @@
                 </article>
                 <article class="cancion">
                     <div class="cover">
-                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                        <img class="img-cancion" src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
                         <div class="play-icon"></div>
                     </div>
                     <div class="info">
@@ -96,7 +96,7 @@
                 </article>
                 <article class="cancion">
                     <div class="cover">
-                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                        <img class="img-cancion" src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
                         <div class="play-icon"></div>
                     </div>
                     <div class="info">
@@ -106,7 +106,7 @@
                 </article>
                 <article class="cancion">
                     <div class="cover">
-                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                        <img class="img-cancion" src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
                         <div class="play-icon"></div>
                     </div>
                     <div class="info">
@@ -116,7 +116,7 @@
                 </article>
                 <article class="cancion">
                     <div class="cover">
-                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                        <img class="img-cancion" src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
                         <div class="play-icon"></div>
                     </div>
                     <div class="info">
@@ -126,7 +126,70 @@
                 </article>
                 <article class="cancion">
                     <div class="cover">
-                        <img src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                        <img class="img-cancion" src="./assets/img/ejemplo_cancion.jpg" alt="Portada canción">
+                        <div class="play-icon"></div>
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.......</p>
+                    </div>
+                </article>
+            </div>
+            <h2>Artistas destacados</h2>
+            <div class="canciones">
+                <article class="cancion">
+                    <div class="cover">
+                        <img class="img-artista" src="./assets/img/emilia_mernes.png" alt="Portada canción">
+                        <div class="play-icon"></div>
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.......</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img class="img-artista" src="./assets/img/emilia_mernes.png" alt="Portada canción">
+                        <div class="play-icon"></div>
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.......</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img class="img-artista" src="./assets/img/emilia_mernes.png" alt="Portada canción">
+                        <div class="play-icon"></div>
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.......</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img class="img-artista" src="./assets/img/emilia_mernes.png" alt="Portada canción">
+                        <div class="play-icon"></div>
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.......</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover">
+                        <img class="img-artista" src="./assets/img/emilia_mernes.png" alt="Portada canción">
+                        <div class="play-icon"></div>
+                    </div>
+                    <div class="info">
+                        <h3><b>Lorem, ipsum dolor.</b></h3>
+                        <p>Lorem, ipsum.......</p>
+                    </div>
+                </article>
+                <article class="cancion">
+                    <div class="cover" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                        <img class="img-artista" src="./assets/img/emilia_mernes.png" alt="Portada canción">
                         <div class="play-icon"></div>
                     </div>
                     <div class="info">
@@ -137,6 +200,28 @@
             </div>
         </section>
     </main>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                </div>
+                <div>
+                    <img src="./assets/img/emilia_mernes.png" alt="">
+                </div>
+                <div class="modal-body">
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quam quae maiores aliquid eveniet eius, obcaecati dignissimos. Deserunt amet eius dignissimos sed obcaecati? Nisi amet et ipsum optio quis fugiat!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
