empece el footer y agregue columnas

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="es_AR">
 
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Proyecto 1: Vibra" />
-    <meta name="keywords" content="Música, Vibra, Ritmo, Melodía, Canción, Letra" />
-    <script src="https://kit.fontawesome.com/6637e0286d.js" crossorigin="anonymous"></script>
-    <meta name="author" content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
+    <meta       name="keywords"       content="Música, Vibra, Ritmo, Melodía, Canción, Letra"     />
+    <script       src="https://kit.fontawesome.com/6637e0286d.js"       crossorigin="anonymous"    ></script>
+    <meta       name="author"       content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia"     />
+    <link       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"       rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"       crossorigin="anonymous"     />
     <link rel="stylesheet" href="./styles/index.css" />
     <title>Vibra</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
         <nav class="navbar navbar-expand-lg mx-3 ">
             <div class="container-fluid d-flex">
@@ -221,32 +221,32 @@
             </div>
         </div>
     </div>
-    
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
-
-<!-- <aside class="sidebar">
-            <ul class="sidebar-menu">
-                <img src="./assets/img/logoynombre.png" alt="">
-                <li>
-                    <i class="fa-solid fa-heart"></i>
-                    <h6>Favoritos</h6>
-                </li>
-                <li>
-                    <i class="fa-solid fa-book"></i>
-                    <h6>Biblioteca</h6>
-                </li>
-                <li>
-                    <i class="fa-solid fa-plus"></i>
-                    <h6>Crear Playlist</h6>
-                </li>
-            </ul>
-        </aside> -->
+    <footer>
+        <section class="container">
+            <div class="row">
+                <div class="col col-lg-4 text-center">
+                    <img class="imagen-footer" src="./assets/img/logoynombre.png" alt="imagen de logo de la pagina">
+                </div>
+                <div class="row col col-lg-4 text-center">
+                    <ul class="puntos-lista">
+                        <li><a href=""><i class="fa-brands fa-instagram fa-lg"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-x-twitter fa-lg"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-facebook-f fa-lg"></i></a></li>
+                    </ul>
+                </div>
+                <div class="row col col-lg-4">
+                    <ul class="puntos-lista">
+                        <li><a href="">Acerca de nosotros</a></li>
+                        <li><a href="">Contacto por consultas</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
