agregados de links de redes sociales, rutas, colores,padding

--- a/index.html
+++ b/index.html
@@ -367,24 +367,28 @@
     </div>
     <footer>
         <section class="container">
-            <div class="row">
-                <div class="col col-lg-4 text-center">
-                    <img class="imagen-footer" src="./assets/img/logoynombre.png" alt="imagen de logo de la pagina">
+            <div class="row text-center">
+                <div class="col col-lg-4 align-content-center">
+                    <a href="index.html"><img class="imagen-footer" src="./assets/img/logoynombre.png" alt="imagen de logo de la pagina"></a>
                 </div>
-                <div class="row col col-lg-4 text-center">
+                <div class="row col col-lg-4">
                     <ul class="puntos-lista">
-                        <li><a href=""><i class="fa-brands fa-instagram fa-lg"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-x-twitter fa-lg"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-facebook-f fa-lg"></i></a></li>
+                    <b>Redes sociales</b>
+                        <li><a class="links-footer" href="https://www.instagram.com/alvaro.morillo/?__pwa=1#" target="_blank"><i class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
+                        <li><a class="links-footer" href="https://x.com/alvaromorillo13?s=11&t=INakPXAa_P5f1wRO6c-OeQ" target="_blank"><i class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
+                        <li><a class="links-footer" href="https://www.facebook.com/alvaro.morillo.507/?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
                     </ul>
                 </div>
                 <div class="row col col-lg-4">
                     <ul class="puntos-lista">
-                        <li><a href="">Acerca de nosotros</a></li>
-                        <li><a href="">Contacto por consultas</a></li>
+                        <b>sobre la empresa</b>
+                        <li class="py-3"><a class="links-footer" href="./pages/nosotros.html">Acerca de nosotros</a></li>
+                        <li class="py-2"><a class="links-footer" href="./pages/contacto.html">Contacto por consultas</a></li>
+                        <li class="py-3"><a class="links-footer" href="./pages/error.html">Ayuda</a></li>
                     </ul>
                 </div>
             </div>
+            <p class="text-center pt-2">&copy;Derechos reservados Vibra 2025</p>
         </section>
     </footer>
     <script
