pagina chequeada, footer responsivo rutas correctas

--- a/index.html
+++ b/index.html
@@ -366,12 +366,12 @@
         </div>
     </div>
     <footer>
-        <section class="container">
+        <section class="container-fluid">
             <div class="row text-center">
-                <div class="col col-lg-4 align-content-center">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
                     <a href="index.html"><img class="imagen-footer" src="./assets/img/logoynombre.png" alt="imagen de logo de la pagina"></a>
                 </div>
-                <div class="row col col-lg-4">
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                     <ul class="puntos-lista">
                     <b>Redes sociales</b>
                         <li><a class="links-footer" href="https://www.instagram.com/alvaro.morillo/?__pwa=1#" target="_blank"><i class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
@@ -379,12 +379,20 @@
                         <li><a class="links-footer" href="https://www.facebook.com/alvaro.morillo.507/?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
                     </ul>
                 </div>
-                <div class="row col col-lg-4">
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
                     <ul class="puntos-lista">
                         <b>sobre la empresa</b>
                         <li class="py-3"><a class="links-footer" href="./pages/nosotros.html">Acerca de nosotros</a></li>
                         <li class="py-2"><a class="links-footer" href="./pages/contacto.html">Contacto por consultas</a></li>
                         <li class="py-3"><a class="links-footer" href="./pages/error.html">Ayuda</a></li>
+                    </ul>
+                </div>
+                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+                    <ul class="puntos-lista">
+                        <b>Membresias</b>
+                        <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan Individual</a></li>
+                        <li class="py-2"><a class="links-footer" href="./pages/suscripcion.html">Plan Duo</a></li>
+                        <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan Familiar</a></li>
                     </ul>
                 </div>
             </div>
