nav y footer agregado a la pagina nosotros y hoja de estilo creado tambien

--- a/pages/error.html
+++ b/pages/error.html
@@ -92,7 +92,7 @@
             <img class="imagen-404" src="../assets/img/error404-png-.png" alt="imagen de error 404 de la pagina">
         </section>
     </main>
-    <footer>
+    <footer class="container-fluid">
       <section class="container-fluid">
         <div class="row text-center">
           <div
