--- a/pages/rock.html
+++ b/pages/rock.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg mx-3 ">
+    <header class="nav-borroso fixed-top">
+        <nav class="navbar navbar-expand-lg mx-3">
             <div class="container-fluid d-flex">
                 <a class="navbar-brand px-4" href="../index.html"><img class="imagen-loogo" src="../assets/img/logo.png"
                         alt="imagen de logo " /></a>
@@ -267,7 +267,7 @@
             <nav>
                 <ul class="pagination justify-content-center">
                     <li class="page-item disabled">
-                        <a class="page-link text-muted" href="#">Anterior</a>
+                        <a class="page-link text-success border-success bg-transparent" href="#">Anterior</a>
                     </li>
                     <li class="page-item">
                         <a class="page-link text-success border-success" href="#">1</a>
@@ -279,10 +279,11 @@
                         <a class="page-link text-success border-success" href="#">3</a>
                     </li>
                     <li class="page-item">
-                        <a class="page-link text-success" href="#">Siguiente</a>
+                        <a class="page-link text-success border-success bg-transparent" href="#">Siguiente</a>
                     </li>
                 </ul>
             </nav>
+
             <hr>
             <h2>Artistas destacados</h2>
             <div class="canciones">
