--- a/pages/suscripcion.html
+++ b/pages/suscripcion.html
@@ -22,7 +22,7 @@
             <p>Obtenga un 20% de descuento en su primer mes.</p>
         </div>
         <div class="logo">
-            <img src="../assets/img/logo.png" alt="Logo">
+            <img src="../assets/img/logoynombre.png" alt="Logo">
         </div>
     </div>
     <div class="plans">
