--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg mx-3 ">
+    <header class="nav-borroso fixed-top">
+        <nav class="navbar navbar-expand-lg mx-3">
             <div class="container-fluid d-flex">
                 <a class="navbar-brand px-4" href="index.html"><img class="imagen-loogo" src="./assets/img/logo.png"
                         alt="imagen de logo " /></a>
                 <form class="d-flex" role="search">
                     <input class="barra-busqueda form-control me-2 rounded-5 text-center px-5" type="search"
-                        placeholder="¿que deseas escuchar?" aria-label="Search" />
+                        placeholder="¿Qué deseas escuchar?" aria-label="Search" />
                 </form>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -50,27 +50,28 @@
     </header>
     <main>
         <section>
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="./assets/img/Sabrina-Carpenter-Espresso.png" alt="First slide">
+                        <img src="./assets/img/Sabrina-Carpenter-Espresso.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="./assets/img/maxresdefault.png" alt="Second slide">
+                        <img src="./assets/img/maxresdefault.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="./assets/img/Escucha Vibra, Música sin Límites.png"
-                            alt="Third slide">
+                        <img src="./assets/img/Escucha Vibra, Música sin Límites.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Anterior</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Siguiente</span>
-                </a>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </section>
         <section class="contenido">
@@ -101,6 +102,39 @@
                         </div>
                     </article>
                 </a>
+
+                <article class="categoria">
+                    <div class="nombre-categoria">Reggaetón</div>
+                    <div class="icono-categoria">
+                        <i class="fa-solid fa-music fa-4x"></i>
+                    </div>
+                    <div class="texto-categoria">Ritmos urbanos que encienden la pista.</div>
+                    <div class="author">- Bad Bunny, Karol G
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                </article>
+
+                <article class="categoria">
+                    <div class="nombre-categoria">Trap Latino</div>
+                    <div class="icono-categoria">
+                        <i class="fa-solid fa-headphones fa-4x"></i>
+                    </div>
+                    <div class="texto-categoria">Voces y beats potentes del barrio.</div>
+                    <div class="author">- Duki, Bizarrap.
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                </article>
+
+                <article class="categoria">
+                    <div class="nombre-categoria">Clásica</div>
+                    <div class="icono-categoria">
+                        <i class="fa-solid fa-music fa-4x"></i>
+                    </div>
+                    <div class="texto-categoria">Obras maestras que trascienden el tiempo.</div>
+                    <div class="author">- Beethoven, Mozart
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                </article>
             </div>
             <hr>
             <h2>Canciones del momento</h2>
@@ -373,9 +407,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
-
-<!-- <aside class="sidebar">
+<!-- 
+ <aside class="sidebar">
             <ul class="sidebar-menu">
                 <img src="./assets/img/logoynombre.png" alt="">
                 <li>
