Agregué nav al login

--- a/pages/pop-ingles.html
+++ b/pages/pop-ingles.html
@@ -22,7 +22,7 @@
                         alt="imagen de logo " /></a>
                 <form class="d-flex" role="search">
                     <input class="barra-busqueda form-control me-2 rounded-5 text-center px-5" type="search"
-                        placeholder="¿que deseas escuchar?" aria-label="Search" />
+                        placeholder="¿Qué deseas escuchar?" aria-label="Search" />
                 </form>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
