--- a/pages/login.html
+++ b/pages/login.html
@@ -11,11 +11,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <title>Vibra</title>
 </head>
 
 <body>
-    <header></header>
+    <header class="nav-borroso fixed-top">
+        <nav class="navbar navbar-expand-lg mx-3">
+            <div class="container-fluid d-flex">
+                <a class="navbar-brand px-4" href="../index.html"><img class="imagen-loogo" src="../assets/img/logo.png"
+                        alt="imagen de logo " /></a>
+                <form class="d-flex" role="search">
+                    <input class="barra-busqueda form-control me-2 rounded-5 text-center px-5" type="search"
+                        placeholder="¿Qué deseas escuchar?" aria-label="Search" />
+                </form>
+                <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <hr>
+                        <li class="nav-item">
+                            <a class="efectos nav-link text-center" aria-current="page" href="../index.html">INICIO</a>
+                        </li>
+                        <hr>
+                        <li class="nav-item">
+                            <a class="efectos nav-link text-center" href="suscripcion.html">SUSCRIPCION</a>
+                        </li>
+                        <hr>
+                        <li class="nav-item">
+                            <a class="efectos nav-link text-center" href="login.html">LOGIN</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main>
         <section class="form-contenedor">
             <h1>Login</h1>
