agregue los primeros titulos de la pagina y cargue la primera imagen de un avatar

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-         <nav class="navbar navbar-expand-lg mx-3 ">
+         <nav class="navbar navbar-expand-lg mx-3">
             <div class="container-fluid d-flex">
                 <a class="navbar-brand px-4" href="index.html"><img class="imagen-loogo" src="../assets/img/logo.png"
                         alt="imagen de logo " /></a>
@@ -48,7 +48,20 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+       <section class="container">
+            <div class="text-center py-3">
+                <h3>Acerca del los devs</h3>
+                <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur, voluptate excepturi ipsum aliquid unde fugiat velit quas ratione officiis tempora beatae recusandae, tempore odio ex id temporibus vitae? Quasi.</b>
+            </div>
+            <hr>
+            <div class="text-center py-3">
+                <h3>Frase que nos representa como equipo</h3>
+                <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, voluptatem assumenda repellendus aliquam ducimus quibusdam dolores eos quasi officia consequatur?</b>
+            </div>
+            <hr>
+       </section>
+    </main>
     <footer class="container-fluid">
         <div class="row text-center">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
