definiendo el estilo de la card y resolviendo error se sintaxis

--- a/pages/suscripcion.html
+++ b/pages/suscripcion.html
@@ -1,147 +1,162 @@
 <!DOCTYPE html>
 <html lang="es_AR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Proyecto 1: Vibra">
-    <meta name="keywords" content="Música, Vibra, Ritmo, Melodía, Canción, Letra">
-    <meta name="author" content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Proyecto 1: Vibra" />
+    <meta
+      name="keywords"
+      content="Música, Vibra, Ritmo, Melodía, Canción, Letra"
+    />
+    <meta
+      name="author"
+      content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
     <title>Vibra</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header></header>
     <main></main>
-    <footer> 
-        <div class="offer-container">
+    <footer>
+      <div class="offer-container">
         <div class="offer">
-            <h1>¡Oferta Especial de Suscripción!</h1>
-            <p>Obtenga un 20% de descuento en su primer mes.</p>
+          <h1>¡Oferta Especial de Suscripción!</h1>
+          <p>Obtenga un 20% de descuento en su primer mes.</p>
         </div>
         <div class="logo">
-            <img src="../assets/img/logo.png" alt="Logo">
+          <img src="../assets/img/logo.png" alt="Logo" />
         </div>
-    </div>
-    <div class="plans">
+      </div>
+      <div class="plans">
         <div class="card">
-            <h2>Individual</h2>
-            <div class="price">$9.99/mes</div>
-            <p>Acceso completo para una persona.</p>
-            <button class="subscribe-btn">Suscribirse</button>
-        </div>
-        <div class="card">
-            <h2>Dúo</h2>
-            <div class="price">$17.99/mes</div>
-            <p>Acceso completo para dos personas.</p>
-            <button class="subscribe-btn">Suscribirse</button>
+          <h2>Individual</h2>
+          <div class="price">$9.99/mes</div>
+          <p>Acceso completo para una persona.</p>
+          <button class="subscribe-btn">Suscribirse</button>
         </div>
         <div class="card">
-            <h2>Familiar</h2>
-            <div class="price">$29.99/mes</div>
-            <p>Acceso completo para hasta cinco personas.</p>
-            <button class="subscribe-btn">Suscribirse</button>
+          <h2>Dúo</h2>
+          <div class="price">$17.99/mes</div>
+          <p>Acceso completo para dos personas.</p>
+          <button class="subscribe-btn">Suscribirse</button>
         </div>
-    </div>
-    <div class="faq">
+        <div class="card">
+          <h2>Familiar</h2>
+          <div class="price">$29.99/mes</div>
+          <p>Acceso completo para hasta cinco personas.</p>
+          <button class="subscribe-btn">Suscribirse</button>
+        </div>
+      </div>
+      <div class="faq">
         <h2>¿TIENES PREGUNTAS?</h2>
         <h3>Tenemos las respuestas</h3>
         <ul class="faq-list">
-            <li>¿Cómo funciona la prueba de Vibra Premium?</li>
-            <li>¿Cómo cancelo mi plan premium?</li>
-            <li>¿Cómo funciona el plan Dúo?</li>
-            <li>¿Cómo funciona el plan Familiar?</li>
+          <li>¿Cómo funciona la prueba de Vibra Premium?</li>
+          <li>¿Cómo cancelo mi plan premium?</li>
+          <li>¿Cómo funciona el plan Dúo?</li>
+          <li>¿Cómo funciona el plan Familiar?</li>
         </ul>
-    </div> 
-    <style>
-         body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #440b0aff 0%, #1b1110ff 50%, black 100%);
-            color: #0c0c0cca;
-            margin: 0;
-            padding: 0;
+      </div>
+      <style>
+        body {
+          font-family: Arial, sans-serif;
+          background: linear-gradient(
+            to bottom,
+            #440b0aff 0%,
+            #1b1110ff 50%,
+            black 100%
+          );
+          color: #0c0c0cca;
+          margin: 0;
+          padding: 0;
         }
         .offer-container {
-            display: flex;
-            align-items: center;
-            background-color: rgba(75, 10, 9, 0);
-            color: rgb(255, 255, 255);
-            padding: 2rem;
-            justify-content: center;
+          display: flex;
+          align-items: center;
+          background-color: rgba(75, 10, 9, 0);
+          color: rgb(255, 255, 255);
+          padding: 2rem;
+          justify-content: center;
         }
         .offer {
-            flex: 1;
-            text-align: center;
+          flex: 1;
+          text-align: center;
         }
         .logo {
-            flex: 1;
-            display: flex;
-            justify-content: center;
+          flex: 1;
+          display: flex;
+          justify-content: center;
         }
         .logo img {
-            max-width: 160px;
-            height: auto;
+          max-width: 160px;
+          height: auto;
         }
         .plans {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            padding: 2.5rem;
+          display: flex;
+          justify-content: center;
+          gap: 30px;
+          padding: 2.5rem;
         }
         .card {
-            background-color: rgb(25, 25, 25);
-            border-radius: 20px;
-            box-shadow: 0 4px 8px rgba(230, 227, 227, 0.41);
-            padding: 2.5rem;
-            width: 270px;
-            text-align: center;
-            color: #f9f6f6;
+          background-color: rgb(25, 25, 25);
+          border-radius: 20px;
+          box-shadow: 0 4px 8px rgba(230, 227, 227, 0.41);
+          padding: 2.5rem;
+          width: 270px;
+          text-align: center;
+          color: #f9f6f6;
         }
         .card h2 {
-            color: #f9f6f6;
+          color: #f9f6f6;
         }
         .price {
-            font-size: 2rem;
-            color: #fafafa;
-            margin: 1rem 0;
+          font-size: 2rem;
+          color: #fafafa;
+          margin: 1rem 0;
         }
         .subscribe-btn {
-            background-color: #6b0504ff;
-            color: rgb(255, 255, 255);
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            cursor: pointer;
+          background-color: #6b0504ff;
+          color: rgb(255, 255, 255);
+          border: none;
+          padding: 0.5rem 1rem;
+          border-radius: 4px;
+          cursor: pointer;
         }
         .faq {
-            text-align: center;
-            padding: 2rem;
-            background-color: rgba(0, 0, 0, 0);
-            margin: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(238, 234, 234, 0);
+          text-align: center;
+          padding: 2rem;
+          background-color: rgba(0, 0, 0, 0);
+          margin: 2rem;
+          border-radius: 8px;
+          box-shadow: 0 4px 8px rgba(238, 234, 234, 0);
         }
         .faq h2 {
-            color: #fdfdfd;
+          color: #fdfdfd;
         }
         .faq h3 {
-            color: #ffffff;
+          color: #ffffff;
         }
         .faq-list {
-            list-style-type: none;
-            padding: 0;
-            color: #f9f6f6;
+          list-style-type: none;
+          padding: 0;
+          color: #f9f6f6;
         }
         .faq-list li {
-            margin: 1rem 0;
+          margin: 1rem 0;
         }
-    </style>
+      </style>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
