--- a/pages/error.html
+++ b/pages/error.html
@@ -88,9 +88,13 @@
       </nav>
     </header>
     <main>
-        <section class="container text-center">
-            <img class="imagen-404" src="../assets/img/error404-png-.png" alt="imagen de error 404 de la pagina">
-        </section>
+      <section class="container text-center">
+        <img
+          class="imagen-404"
+          src="../assets/img/error404-png-.png"
+          alt="imagen de error 404 de la pagina"
+        />
+      </section>
     </main>
     <footer class="container-fluid">
       <section class="container-fluid">
