--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,103 +1,217 @@
 <!DOCTYPE html>
 <html lang="es_AR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Proyecto 1: Vibra">
-    <meta name="keywords" content="Música, Vibra, Ritmo, Melodía, Canción, Letra">
-    <script       src="https://kit.fontawesome.com/6637e0286d.js"       crossorigin="anonymous"    ></script>
-    <meta name="author" content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/nosotros.css">
-    <title>Vibra</title>
-</head>
-
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Proyecto 1: Vibra" />
+    <meta
+      name="keywords"
+      content="Música, Vibra, Ritmo, Melodía, Canción, Letra"
+    />
+    <script
+      src="https://kit.fontawesome.com/6637e0286d.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta
+      name="author"
+      content="Tomás Ponce, Alvaro Morillo, Patricio Romero, Santiago Heredia"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../styles/nosotros.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>sobre nosotros</title>
+  </head>
+  <body>
     <header>
-         <nav class="navbar navbar-expand-lg mx-3">
-            <div class="container-fluid d-flex">
-                <a class="navbar-brand px-4" href="index.html"><img class="imagen-loogo" src="../assets/img/logo.png"
-                        alt="imagen de logo " /></a>
-                <form class="d-flex" role="search">
-                    <input class="barra-busqueda form-control me-2 rounded-5 text-center px-5" type="search"
-                        placeholder="¿que deseas escuchar?" aria-label="Search" />
-                </form>
-                <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <hr>
-                        <li class="nav-item">
-                            <a class="efectos nav-link text-center" aria-current="page" href="../index.html">INICIO</a>
-                        </li>
-                        <hr>
-                        <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="./pages/suscripcion.html">SUSCRIPCION</a>
-                        </li>
-                        <hr>
-                        <li class="nav-item">
-                            <a class="efectos nav-link text-center" href="./pages/login.html">LOGIN</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg mx-3">
+        <div class="container-fluid d-flex">
+          <a class="navbar-brand px-4" href="index.html"
+            ><img
+              class="imagen-loogo"
+              src="../assets/img/logo.png"
+              alt="imagen de logo "
+          /></a>
+          <form class="d-flex" role="search">
+            <input
+              class="barra-busqueda form-control me-2 rounded-5 text-center px-5"
+              type="search"
+              placeholder="¿que deseas escuchar?"
+              aria-label="Search"
+            />
+          </form>
+          <button
+            class="navbar-toggler bg-light"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <hr />
+              <li class="nav-item">
+                <a
+                  class="efectos nav-link text-center"
+                  aria-current="page"
+                  href="index.html"
+                  >INICIO</a
+                >
+              </li>
+              <hr />
+              <li class="nav-item">
+                <a
+                  class="efectos nav-link text-center"
+                  href="./pages/suscripcion.html"
+                  >SUSCRIPCION</a
+                >
+              </li>
+              <hr />
+              <li class="nav-item">
+                <a
+                  class="efectos nav-link text-center"
+                  href="./pages/login.html"
+                  >LOGIN</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
-       <section class="container">
-            <div class="text-center py-3">
-                <h3>Acerca del los devs</h3>
-                <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur, voluptate excepturi ipsum aliquid unde fugiat velit quas ratione officiis tempora beatae recusandae, tempore odio ex id temporibus vitae? Quasi.</b>
-            </div>
-            <hr>
-            <div class="text-center py-3">
-                <h3>Frase que nos representa como equipo</h3>
-                <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, voluptatem assumenda repellendus aliquam ducimus quibusdam dolores eos quasi officia consequatur?</b>
-            </div>
-            <hr>
-       </section>
+      <section class="container">
+        <div class="text-center py-3">
+          <h3>Acerca del los devs</h3>
+          <b
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+            consectetur, voluptate excepturi ipsum aliquid unde fugiat velit
+            quas ratione officiis tempora beatae recusandae, tempore odio ex id
+            temporibus vitae? Quasi.</b
+          >
+        </div>
+        <hr />
+        <div class="text-center py-3">
+          <h3>Frase que nos representa como equipo</h3>
+          <b
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. A,
+            voluptatem assumenda repellendus aliquam ducimus quibusdam dolores
+            eos quasi officia consequatur?</b
+          >
+        </div>
+        <hr />
+        <div class="card">
+          <div class="text-center"><img class="imagen-avatar-alvaro" src="../assets/img/foto-avatar-A.png" alt=""></div>
+          <h3 class="card-nombre">About Me</h3>
+          <p class="info">
+            I’m Walter, a multidisciplinary designer who focuses on telling my
+            clients’ stories visually, through enjoyable and meaningful
+            experiences. I specialize in responsive websites and functional user
+            interfaces.
+          </p>
+        </div>
+      </section>
     </main>
     <footer class="container-fluid">
+      <section class="container-fluid">
         <div class="row text-center">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid">
-                    <a href="index.html"><img class="imagen-footer" src="../assets/img/logoynombre.png" alt="imagen de logo de la pagina"></a>
-                </div>
-                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
-                    <ul class="puntos-lista">
-                    <b>Redes sociales</b>
-                        <li><a class="links-footer" href="https://www.instagram.com/alvaro.morillo/?__pwa=1#" target="_blank"><i class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
-                        <li><a class="links-footer" href="https://x.com/alvaromorillo13?s=11&t=INakPXAa_P5f1wRO6c-OeQ" target="_blank"><i class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
-                        <li><a class="links-footer" href="https://www.facebook.com/alvaro.morillo.507/?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"></i>@vibra.music</a></li>
-                    </ul>
-                </div>
-                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
-                    <ul class="puntos-lista">
-                        <b>sobre la empresa</b>
-                        <li class="py-3"><a class="links-footer" href="./pages/nosotros.html">Acerca de nosotros</a></li>
-                        <li class="py-2"><a class="links-footer" href="./pages/contacto.html">Contacto por consultas</a></li>
-                        <li class="py-3"><a class="links-footer" href="./pages/error.html">Ayuda</a></li>
-                    </ul>
-                </div>
-                <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
-                    <ul class="puntos-lista">
-                        <b>Membresias</b>
-                        <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan Individual</a></li>
-                        <li class="py-2"><a class="links-footer" href="./pages/suscripcion.html">Plan Duo</a></li>
-                        <li class="py-3"><a class="links-footer" href="./pages/suscripcion.html">Plan Familiar</a></li>
-                    </ul>
-                </div>
-            </div>
-            <p class="text-center pt-2">&copy;Derechos reservados Vibra 2025</p>
-        </section>
+          <div
+            class="col-12 col-sm-12 col-md-12 col-lg-3 align-content-center primer-grid"
+          >
+            <a href="index.html"
+              ><img
+                class="imagen-footer"
+                src="../assets/img/logoynombre.png"
+                alt="imagen de logo de la pagina"
+            /></a>
+          </div>
+          <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+            <ul class="puntos-lista">
+              <b>Redes sociales</b>
+              <li>
+                <a
+                  class="links-footer"
+                  href="https://www.instagram.com/alvaro.morillo/?__pwa=1#"
+                  target="_blank"
+                  ><i
+                    class="fa-brands fa-instagram fa-lg py-4 px-2 iconos text-light"
+                  ></i
+                  >@vibra.music</a
+                >
+              </li>
+              <li>
+                <a
+                  class="links-footer"
+                  href="https://x.com/alvaromorillo13?s=11&t=INakPXAa_P5f1wRO6c-OeQ"
+                  target="_blank"
+                  ><i
+                    class="fa-brands fa-x-twitter fa-lg py-4 px-2 iconos text-light"
+                  ></i
+                  >@vibra.music</a
+                >
+              </li>
+              <li>
+                <a
+                  class="links-footer"
+                  href="https://www.facebook.com/alvaro.morillo.507/?locale=es_LA"
+                  target="_blank"
+                  ><i
+                    class="fa-brands fa-facebook-f fa-lg py-4 px-2 iconos text-light"
+                  ></i
+                  >@vibra.music</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+            <ul class="puntos-lista">
+              <b>sobre la empresa</b>
+              <li class="py-3">
+                <a class="links-footer" href="./pages/nosotros.html"
+                  >Acerca de nosotros</a
+                >
+              </li>
+              <li class="py-2">
+                <a class="links-footer" href="./pages/contacto.html"
+                  >Contacto por consultas</a
+                >
+              </li>
+              <li class="py-3">
+                <a class="links-footer" href="./pages/error.html">Ayuda</a>
+              </li>
+            </ul>
+          </div>
+          <div class="row col-12 col-sm-12 col-md-12 col-lg-3">
+            <ul class="puntos-lista">
+              <b>Membresias</b>
+              <li class="py-3">
+                <a class="links-footer" href="./pages/suscripcion.html"
+                  >Plan Individual</a
+                >
+              </li>
+              <li class="py-2">
+                <a class="links-footer" href="./pages/suscripcion.html"
+                  >Plan Duo</a
+                >
+              </li>
+              <li class="py-3">
+                <a class="links-footer" href="./pages/suscripcion.html"
+                  >Plan Familiar</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="text-center pt-2">&copy;Derechos reservados Vibra 2025</p>
+      </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-</body>
-
+  </body>
 </html>
