testeando las cards,poniendole efectos y haciendo responsive

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -108,15 +108,63 @@
           >
         </div>
         <hr />
-        <div class="card">
-          <div class="text-center"><img class="imagen-avatar-alvaro" src="../assets/img/foto-avatar-A.png" alt=""></div>
-          <h3 class="card-nombre">About Me</h3>
-          <p class="info">
-            I’m Walter, a multidisciplinary designer who focuses on telling my
-            clients’ stories visually, through enjoyable and meaningful
-            experiences. I specialize in responsive websites and functional user
-            interfaces.
-          </p>
+        <div class="container">
+          <div class="row justify-content-center py-5">
+            <div class="col-9 col-sm-12 col-md-6 col-lg-4">
+              <div class="card">
+                <div class="text-center">
+                  <img
+                    class="imagen-avatar-alvaro"
+                    src="../assets/img/foto-avatar-A.png"
+                    alt=""
+                  />
+                </div>
+                <h3 class="card-nombre pt-3">Alvaro Morillo</h3>
+                <p class="info">
+                  I’m Walter, a multidisciplinary designer who focuses on
+                  telling my clients’ stories visually, through enjoyable and
+                  meaningful experiences. I specialize in responsive websites
+                  and functional user interfaces.
+                </p>
+              </div>
+            </div>
+            <div class="col-9 col-sm-12 col-md-6 col-lg-4">
+              <div class="card">
+                <div class="text-center">
+                  <img
+                    class="imagen-avatar-alvaro"
+                    src="../assets/img/foto-perfil-B.jpg"
+                    alt=""
+                  />
+                </div>
+                <h3 class="card-nombre pt-3">Patricio Romero</h3>
+                <p class="info">
+                  I’m Walter, a multidisciplinary designer who focuses on
+                  telling my clients’ stories visually, through enjoyable and
+                  meaningful experiences. I specialize in responsive websites
+                  and functional user interfaces.
+                </p>
+              </div>
+            </div>
+            <div class="col-9 col-sm-12 col-md-6 col-lg-3">
+              <div class="card">
+                <div class="text-center">
+                  <img
+                    class="imagen-avatar-alvaro"
+                    src="../assets/img/avatar.png"
+                    alt=""
+                  />
+                </div>
+                <h3 class="card-nombre pt-3">Tomas Ponce</h3>
+                <p class="info">
+                  I’m Walter, a multidisciplinary designer who focuses on
+                  telling my clients’ stories visually, through enjoyable and
+                  meaningful experiences. I specialize in responsive websites
+                  and functional user interfaces.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
